--- a/src/app/cliente/dialog/dialogcliente.component.html
+++ b/src/app/cliente/dialog/dialogcliente.component.html
@@ -8,6 +8,5 @@
 
 <div mat-dialog-actions>
    <button mat-raised-button (click)="close()">Cancelar</button>
-   <button mat-raised-button color="primary" 
-   (click)="cliente!=null ? editCliente() : addCliente()">Guardar</button>
+   <button mat-raised-button color="primary" (click)="cliente!=null ? editCliente() : addCliente()">Guardar</button>
 </div>
