--- a/src/app/venta/venta.component.html
+++ b/src/app/venta/venta.component.html
@@ -1,3 +1,27 @@
 <div>
     <button mat-raised-button color="primary" (click)="openAdd()">Nueva venta</button>
 </div>
+
+<!--<div>
+    <table mat-table [dataSource]="lst" class="mat-elevation-z4">
+        <ng-container matColumnDef="id">
+         <th mat-header-cell *matHeaderCellDef="id">#</th>
+         <td mat-cell *matCellDef="element.id"></td>
+        </ng-container>
+
+        <ng-container matColumnDef="fecha">
+            <th mat-header-cell *matHeaderCellDef="fecha">#</th>
+            <td mat-cell *matCellDef="element.fecha"></td>
+           </ng-container>
+
+           <ng-container matColumnDef="idCliente">
+            <th mat-header-cell *matHeaderCellDef="idCliente">#</th>
+            <td mat-cell *matCellDef="element.idCliente"></td>
+           </ng-container>
+
+           <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef="total">total</th>
+            <td mat-cell *matCellDef="element.total"></td>
+           </ng-container>
+    </table>
+</div>-->
